--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <nav id="menuPrincipal">
           <div class="container">
             <div class="nav-wrapper">
-              <a href="#!" class="brand-logo"><!--<img src="img/logo.png" class="responsive-img" alt="Criação de sites e sistemas web personalizados">-->LifeDesign</a>
+              <a href="#!" class="brand-logo animated bounce infinite"><!--<img src="img/logo.png" class="responsive-img" alt="Criação de sites e sistemas web personalizados">-->LifeDesign</a>
               <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="fa fa-bars"></i></a>
               <ul class="right hide-on-med-and-down">
                 <li><a href="#inicio">Início</a></li>
@@ -163,10 +163,15 @@
         <div class="row wow bounceInLeft">
           <div class="col l7 m7 s12">
             <h3 class="titulo">
-              Lorem Ipsum
+            Marketing Visual
             </h3>
             <p class="texto">
-              Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.
+            <strong> Tratamos  de utilizar diferentes formatos visuais  com o objetivo de transmitir informações aos leitores de maneira mais eficiente, portanto,
+               com maior probabilidade de conversão e sucesso ao transmitir sua mensagem.</strong>
+              Uma característica importantíssima dos recursos visuais que visamos empenhar,
+               é a sua capacidade de despertar a atenção do público por ser dinâmico e interessante ao olhar, dispertando emoções,
+               resumiundo ideias e fazendo comunicações memoráveís!
+              Grandes texto já acabam sendo cansativos e tediantes, pois não possuem o mesmo carisma de um infográfico.
           </div>
           <div class="col l5 m5 s12">
             <br>
@@ -183,10 +188,11 @@
           </div>
           <div class="col l7 m7 s12">
             <h3 class="titulo">
-                Lorem Ipsum
+                Identidade Visual
             </h3>
             <p class="texto">
-              Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.
+              A identidade visual também pode ser a primeira impressão passada para seus fornecedores e concorrentes, por isso, a influência de uma boa identidade visual pode formar a opinião a respeito da sua empresa de imediato.
+    <strong>Aqui na LifeDesign tratamos de desenvolver todo o sistema visual da empresa, explorando informações e combinaçõe entre si através de estudos de semiótica, procurando atender as  comunicações, de conceitos e os propósitos da sua marca de forma eficaz.</strong>
             </p>
           </div>
           <div class="col l5 m5 s12 show-on-medium-and-down hide-on-med-and-up">
@@ -195,7 +201,7 @@
           </div>
         </div>
 
-        <div class="row wow bounceInLeft">
+        <!--div class="row wow bounceInLeft">
           <div class="col l7 m7 s12">
             <h3 class="titulo">
                 Lorem Ipsum
@@ -209,7 +215,7 @@
              <img src="assets/image/logo.png" class="responsive-img" alt="">
           </div>
         </div>
-      </div>
+      </div-->
     </section>
 
 
@@ -227,7 +233,7 @@
             </div>
 
             <div class="col l4 m4 s6">
-              <div class="port-box wow bounceInLeft">
+              <div class="port-box wow rollIn center">
                 <a href="https://www.facebook.com/LifeWDesign/" target="_blank">
                   <img src="assets/image/logo.png" class="responsive-img" alt="Logo G4 Mídia">
                 </a>
@@ -235,7 +241,7 @@
             </div>
 
             <div class="col l4 m4 s6 ">
-              <div class="port-box wow bounceInUp">
+              <div class="port-box wow rollIn center">
                 <a href="https://www.facebook.com/LifeWDesign/" target="_blank">
                   <img src="assets/image/logo.png" class="responsive-img" alt="Logo G4 Mídia">
                 </a>
@@ -243,7 +249,7 @@
             </div>
 
             <div class="col l4 m4 s6">
-              <div class="port-box wow bounceInRight">
+              <div class="port-box wow rollIn center">
                 <a href="https://www.facebook.com/LifeWDesign/" target="_blank">
                   <img src="assets/image/logo.png" class="responsive-img" alt="Logo G4 Mídia">
                 </a>
