--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <nav id="menuPrincipal">
           <div class="container">
             <div class="nav-wrapper">
-              <a href="#!" class="brand-logo animated bounce infinite"><!--<img src="img/logo.png" class="responsive-img" alt="Criação de sites e sistemas web personalizados">-->LifeDesign</a>
+              <a href="#!" class="brand-logo "><!--<img src="img/logo.png" class="responsive-img" alt="Criação de sites e sistemas web personalizados">-->LifeDesign</a>
               <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="fa fa-bars"></i></a>
               <ul class="right hide-on-med-and-down">
                 <li><a href="#inicio">Início</a></li>
