--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
             <div class="redes ">
 
 
-              <a href="#" class="tooltipped" data-position="top" data-delay="50" data-tooltip="Email: ##########">
+              <a href="#" class="tooltipped" data-position="top" data-delay="50" data-tooltip="@LifeDesignMG">
                 <i class="fab fa-facebook-f facebook" ></i>
               </a>
-              <a href="https://www.facebook.com/LifeWDesign/" class="tooltipped" data-position="top" data-delay="50" data-tooltip="@LifeWDesign">
+              <a href="https://www.facebook.com/LifeWDesign/" class="tooltipped" data-position="top" data-delay="50" data-tooltip="Email: jvhdsantos@gmail.com">
                   <i class="far fa-envelope email" ></i>
               </a>
 
-              <a class="tooltipped" href="#contato" data-position="top" data-delay="50" data-tooltip="TIM/WPP (32) 9 9118-8021 - ME LIGUE">
+              <a class="tooltipped" href="#contato" data-position="top" data-delay="50" data-tooltip="TIM/WPP (32) 9 9809-7650  - ME LIGUE">
                 <i class="fa fa-phone telefone" aria-hidden="true"></i>
               </a>
             </div>
@@ -235,7 +235,7 @@
             <div class="col l4 m4 s6">
               <div class="port-box wow rollIn center">
                 <a href="https://www.facebook.com/LifeWDesign/" target="_blank">
-                  <img src="assets/image/logo.png" class="responsive-img" alt="Logo G4 Mídia">
+                  <img src="assets/image/sc.jpg" class="responsive-img" alt="Logo G4 Mídia">
                 </a>
               </div>
             </div>
@@ -243,7 +243,7 @@
             <div class="col l4 m4 s6 ">
               <div class="port-box wow rollIn center">
                 <a href="https://www.facebook.com/LifeWDesign/" target="_blank">
-                  <img src="assets/image/logo.png" class="responsive-img" alt="Logo G4 Mídia">
+                  <img src="assets/image/pizza.jpg" class="responsive-img" alt="Logo G4 Mídia">
                 </a>
               </div>
             </div>
@@ -251,7 +251,7 @@
             <div class="col l4 m4 s6">
               <div class="port-box wow rollIn center">
                 <a href="https://www.facebook.com/LifeWDesign/" target="_blank">
-                  <img src="assets/image/logo.png" class="responsive-img" alt="Logo G4 Mídia">
+                  <img src="assets/image/mineiro.jpg" class="responsive-img" alt="Logo G4 Mídia">
                 </a>
               </div>
             </div>
@@ -277,14 +277,14 @@
               <!--h5 class="titulo">Ou se preferir...</h5-->
             <!--/div-->
               <div class="dados  ">
-                <a href="#" class="tooltipped" data-position="top" data-delay="50" data-tooltip="Email: ##########">
+                <a href="https://www.facebook.com/LifeWDesign" class="tooltipped" data-position="top" data-delay="50" data-tooltip="@LifeDesignMG">
                   <i class="fab fa-facebook-f facebook" ></i>
                 </a>
-                <a href="https://www.facebook.com/LifeWDesign/" class="tooltipped" data-position="top" data-delay="50" data-tooltip="@LifeWDesign">
+                <a href="https://accounts.google.com/signin/v2/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&service=mail&sacu=1&rip=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin" class="tooltipped" data-position="top" data-delay="50" data-tooltip="jvhdsantos@gmail.com">
                     <i class="far fa-envelope email" ></i>
                 </a>
 
-                <a class="tooltipped" href="#contato" data-position="top" data-delay="50" data-tooltip="TIM/WPP (32) 9 9118-8021 - ME LIGUE">
+                <a class="tooltipped" href="https://web.whatsapp.com/" data-position="top" data-delay="50" data-tooltip="TIM/WPP (32) 9 9809-7650 - ME LIGUE">
                   <i class="fa fa-phone telefone" aria-hidden="true"></i>
                 </a>
               </div>
@@ -305,15 +305,10 @@
             <p class="grey-text text-lighten-4">Precisando de um novo visual? Entre em contato e vamos conversar.</p>
             <p class="grey-text text-lighten-4"><strong>Muriaé -</strong> MG</p>
           </div>
-          <div class="col l4 offset-l2 s12">
-            <h5 class="white-text">Links</h5>
-            <ul>
-              <li><a class="grey-text text-lighten-3" href="#inicio">Início</a></li>
-              <li><a class="grey-text text-lighten-3" href="#sobre">Sobre</a></li>
-              <li><a class="grey-text text-lighten-3" href="#portfolio">Portfolio</a></li>
-              <li><a class="grey-text text-lighten-3" href="#contato">Contato</a></li>
-            </ul>
-          </div>
+          <!--div class="col l4 offset-l2 s12">
+            <h5 class="white-text"></h5>
+
+          </div-->
         </div>
       </div>
       <div class="footer-copyright  copyright ">
