--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
             <div class="col l4 m4 s6">
               <div class="port-box wow rollIn center">
-                <a href="https://www.facebook.com/LifeWDesign/" target="_blank">
+                <a href="https://www.facebook.com/syncolltechlive/" target="_blank">
                   <img src="assets/image/sc.jpg" class="responsive-img" alt="Logo G4 Mídia">
                 </a>
               </div>
@@ -250,11 +250,36 @@
 
             <div class="col l4 m4 s6">
               <div class="port-box wow rollIn center">
-                <a href="https://www.facebook.com/LifeWDesign/" target="_blank">
+                <a href="https://www.facebook.com/mineirolanchesmuriae/" target="_blank">
                   <img src="assets/image/mineiro.jpg" class="responsive-img" alt="Logo G4 Mídia">
                 </a>
               </div>
             </div>
+
+            <div class="col l4 m4 s6">
+              <div class="port-box wow rollIn center">
+                <a href="https://www.facebook.com/syncolltechlive/" target="_blank">
+                  <img src="assets/image/sc.jpg" class="responsive-img" alt="Logo G4 Mídia">
+                </a>
+              </div>
+            </div>
+
+            <div class="col l4 m4 s6 ">
+              <div class="port-box wow rollIn center">
+                <a href="https://www.facebook.com/LifeWDesign/" target="_blank">
+                  <img src="assets/image/pizza.jpg" class="responsive-img" alt="Logo G4 Mídia">
+                </a>
+              </div>
+            </div>
+
+            <div class="col l4 m4 s6">
+              <div class="port-box wow rollIn center">
+                <a href="https://www.facebook.com/mineirolanchesmuriae/" target="_blank">
+                  <img src="assets/image/mineiro.jpg" class="responsive-img" alt="Logo G4 Mídia">
+                </a>
+              </div>
+            </div>
+
 
           </div>
         </div>
