adicionando mais portifolio

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <div class="col l4 m4 s6">
               <div class="port-box wow rollIn center">
                 <a href="https://www.facebook.com/syncolltechlive/" target="_blank">
-                  <img src="assets/image/sc.jpg" class="responsive-img" alt="Logo G4 Mídia">
+                  <img src="assets/image/sc.jpg" class="responsive-img" alt="syncolltechlive">
                 </a>
               </div>
             </div>
@@ -243,7 +243,7 @@
             <div class="col l4 m4 s6 ">
               <div class="port-box wow rollIn center">
                 <a href="https://www.facebook.com/LifeWDesign/" target="_blank">
-                  <img src="assets/image/pizza.jpg" class="responsive-img" alt="Logo G4 Mídia">
+                  <img src="assets/image/pizza.jpg" class="responsive-img" alt="Pizzaria">
                 </a>
               </div>
             </div>
@@ -251,23 +251,23 @@
             <div class="col l4 m4 s6">
               <div class="port-box wow rollIn center">
                 <a href="https://www.facebook.com/mineirolanchesmuriae/" target="_blank">
-                  <img src="assets/image/mineiro.jpg" class="responsive-img" alt="Logo G4 Mídia">
+                  <img src="assets/image/mineiro.jpg" class="responsive-img" alt="Mineiro lanche">
                 </a>
               </div>
             </div>
 
             <div class="col l4 m4 s6">
               <div class="port-box wow rollIn center">
-                <a href="https://www.facebook.com/syncolltechlive/" target="_blank">
-                  <img src="assets/image/sc.jpg" class="responsive-img" alt="Logo G4 Mídia">
+                <a href="https://www.facebook.com/syncolltechlivemusica ar/" target="_blank">
+                  <img src="assets/image/musica.jpg" class="responsive-img" alt="">
                 </a>
               </div>
             </div>
 
             <div class="col l4 m4 s6 ">
               <div class="port-box wow rollIn center">
-                <a href="https://www.facebook.com/LifeWDesign/" target="_blank">
-                  <img src="assets/image/pizza.jpg" class="responsive-img" alt="Logo G4 Mídia">
+                <a href="https://www.facebook.com/IDB-Instituto-de-Beleza-1994950217280008/" target="_blank">
+                  <img src="assets/image/beleza.jpg" class="responsive-img" alt="Infituto de beleza">
                 </a>
               </div>
             </div>
@@ -275,7 +275,7 @@
             <div class="col l4 m4 s6">
               <div class="port-box wow rollIn center">
                 <a href="https://www.facebook.com/mineirolanchesmuriae/" target="_blank">
-                  <img src="assets/image/mineiro.jpg" class="responsive-img" alt="Logo G4 Mídia">
+                  <img src="assets/image/kids.jpg" class="responsive-img" alt="">
                 </a>
               </div>
             </div>
