--- a/index.html
+++ b/index.html
@@ -234,15 +234,18 @@
 
             <div class="col l4 m4 s6">
               <div class="port-box wow rollIn center">
-                <a href="https://www.facebook.com/syncolltechlive/" target="_blank">
+                <a href="https://www.facebook.com/syncolltechlive/" target="_blank" class="tooltipped" data-position="top" data-delay="50" data-tooltip="DJ'S SyncollTechlive">
                   <img src="assets/image/sc.jpg" class="responsive-img" alt="syncolltechlive">
+
                 </a>
+
               </div>
+
             </div>
 
             <div class="col l4 m4 s6 ">
               <div class="port-box wow rollIn center">
-                <a href="https://www.facebook.com/LifeWDesign/" target="_blank">
+                <a href="https://www.facebook.com/LifeWDesign/" target="_blank"  class="tooltipped" data-position="top" data-delay="50" data-tooltip="Pizzaria 3 irmãos">
                   <img src="assets/image/pizza.jpg" class="responsive-img" alt="Pizzaria">
                 </a>
               </div>
@@ -250,15 +253,16 @@
 
             <div class="col l4 m4 s6">
               <div class="port-box wow rollIn center">
-                <a href="https://www.facebook.com/mineirolanchesmuriae/" target="_blank">
+                <a href="https://www.facebook.com/mineirolanchesmuriae/" target="_blank"  class="tooltipped" data-position="top" data-delay="50" data-tooltip="Lanchonete Mineiro Lanches">
                   <img src="assets/image/mineiro.jpg" class="responsive-img" alt="Mineiro lanche">
                 </a>
+
               </div>
             </div>
 
             <div class="col l4 m4 s6">
               <div class="port-box wow rollIn center">
-                <a href="https://www.facebook.com/syncolltechlivemusica ar/" target="_blank">
+                <a href="https://www.facebook.com/syncolltechlivemusica ar/" target="_blank"  class="tooltipped" data-position="top" data-delay="50" data-tooltip="Escola Espaço Musical">
                   <img src="assets/image/musica.jpg" class="responsive-img" alt="">
                 </a>
               </div>
@@ -266,7 +270,7 @@
 
             <div class="col l4 m4 s6 ">
               <div class="port-box wow rollIn center">
-                <a href="https://www.facebook.com/IDB-Instituto-de-Beleza-1994950217280008/" target="_blank">
+                <a href="https://www.facebook.com/IDB-Instituto-de-Beleza-1994950217280008/" target="_blank"  class="tooltipped" data-position="top" data-delay="50" data-tooltip="Salão de beleza IDB">
                   <img src="assets/image/beleza.jpg" class="responsive-img" alt="Infituto de beleza">
                 </a>
               </div>
@@ -274,7 +278,7 @@
 
             <div class="col l4 m4 s6">
               <div class="port-box wow rollIn center">
-                <a href="https://www.facebook.com/mineirolanchesmuriae/" target="_blank">
+                <a href="https://www.facebook.com/mineirolanchesmuriae/" target="_blank"  class="tooltipped" data-position="top" data-delay="50" data-tooltip="Moda Kids">
                   <img src="assets/image/kids.jpg" class="responsive-img" alt="">
                 </a>
               </div>
