--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <meta name="description" content="Crie um site de qualidade, preço acessível e que gere os resultados esperados. Desenvolvimento de sites e sistemas web personalizados. Design exclusivo. Sites modernos e rápidos" />
     <META NAME="KEYWORDS" CONTENT="criar site, criar um site barato, desenvolver um site, site para empresas, site bom e barato para empresa, leandro castro, muriae, muriaé, desenvolvimento web" >
     -->
-
+<link rel="shortcut icon" href="assets/image/logo.png" type="image/x-icon" /> 
     <script type="text/javascript">
 
     window.onscroll = function(){
