--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
     <meta name="content" charset="utf-8">
 
     <!-- Meta Tags do facebook -->
-<!--
 
-    <meta property="og:locale" content="pt_BR">
+
+    <meta property="og:ocale" content="pt_BR">
 	  <meta property='og:type' content='website' />
-    <meta property="og:url" content="http://leandroc.com.br">
-    <meta property="og:title" content="Leandro Castro - Crie um site para seu negócio - Sites exclusivos - Alcance mais clientes">
-    <meta property="og:site_name" content="Leandro Castro - Desenvolvimento Web">
-    <meta property="og:description" content="Crie um site de qualidade, preço acessível e que gere os resultados esperados. Desenvolvimento de sites e sistemas web personalizados. Design exclusivo. Sites modernos e rápidos">
-    <meta property="og:image" content="img/capa4.jpg">
+    <meta property="og:url" content="https://lifedesignmg.github.io/">
+    <meta property="og:title" content="João Victhor Santos - Crie um design para seu negócio - Artes gráficas exclusivos - Alcance mais clientes">
+    <meta property="og:site_name" content=João Victhor Santos</rb> - Design Gráfico">
+    <meta property="og:description" content="Crie um design de qualidade, preço acessível e que gere os resultados esperados.  Design exclusivo. Imagens limpa  e direcionada">
+    <meta property="og:image" content="assets/imagem/capaweb.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="600">
--->
+
     <!-- Meta tags Google -->
-    <!--
-    <link rel="icon" type="image/png" href="img/miniatura.jpg" />
-    <META NAME="ABSTRACT" CONTENT="Leandro Castro - Crie um site para seu negócio - Sites exclusivos - Alcance mais clientes">
-    <meta name="description" content="Crie um site de qualidade, preço acessível e que gere os resultados esperados. Desenvolvimento de sites e sistemas web personalizados. Design exclusivo. Sites modernos e rápidos" />
-    <META NAME="KEYWORDS" CONTENT="criar site, criar um site barato, desenvolver um site, site para empresas, site bom e barato para empresa, leandro castro, muriae, muriaé, desenvolvimento web" >
-    -->
-<link rel="shortcut icon" href="assets/image/logo.png" type="image/x-icon" /> 
+
+    <link rel="icon" type="image/png" href="asssets/imagem/capaweb.jpg" />
+    <META NAME="ABSTRACT" CONTENT="João Victhor Santos - Crie um design para seu negócio - Artes gráficas exclusivos - Alcance mais clientes">
+    <meta name="description" content="Crie um design de qualidade, preço acessível e que gere os resultados esperados.  Design exclusivo. Imagens limpa  e direcionada" />
+    <META NAME="KEYWORDS" CONTENT="criar artes gráficas, criar um design barato, desenvolver uma identidade visual,  João Victhor Santos, muriae, muriaé, desenvolvimento web" >
+
+<link rel="shortcut icon" href="assets/image/logo.png" type="image/x-icon" />
     <script type="text/javascript">
 
     window.onscroll = function(){
@@ -330,7 +330,7 @@
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h5 class="white-text">João Victhor Ramos</h5>
+            <h5 class="white-text">João Victhor Santos</h5>
             <p class="grey-text text-lighten-4">Precisando de um novo visual? Entre em contato e vamos conversar.</p>
             <p class="grey-text text-lighten-4"><strong>Muriaé -</strong> MG</p>
           </div>
