--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137476793-1"></script>
+      <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-137476793-1');
+      </script>
+
+
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -37,7 +48,6 @@
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="600">
 
-    <!-- Meta tags Google -->
 
     <link rel="icon" type="image/png" href="asssets/imagem/capaweb.jpg" />
     <META NAME="ABSTRACT" CONTENT="João Victhor Santos - Crie um design para seu negócio - Artes gráficas exclusivos - Alcance mais clientes">
