--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 
     <meta property="og:ocale" content="pt_BR">
 	  <meta property='og:type' content='website' />
-    <meta property="og:url" content="https://lifedesignmg.github.io/">
+    <meta property="og:url" content="https://lifedesignmg.github.io">
     <meta property="og:title" content="João Victhor Santos - Crie um design para seu negócio - Artes gráficas exclusivos - Alcance mais clientes">
     <meta property="og:site_name" content="João Victhor Santos - Design Gráfico">
     <meta property="og:description" content="Crie um design de qualidade, preço acessível e que gere os resultados esperados.  Design exclusivo. Imagens limpa  e direcionada">
-    <meta property="og:image" content="capaweb">
+    <meta property="og:image" content="assets/image/capaweb.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="600">
