--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Meta Tags do facebook -->
 
 
-    <meta property="og:ocale" content="pt_BR">
+    <meta property="og:locale" content="pt_BR">
 	  <meta property='og:type' content='website' />
     <meta property="og:url" content="https://lifedesignmg.github.io">
     <meta property="og:title" content="João Victhor Santos - Crie um design para seu negócio - Artes gráficas exclusivos - Alcance mais clientes">
