--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- Meta Tags do facebook -->
 
-
+    <meta property="fb:admins" content="621620361626757" /> 
     <meta property="og:locale" content="pt_BR">
 	  <meta property='og:type' content='website' />
     <meta property="og:url" content="https://lifedesignmg.github.io">
