--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Meta Tags do facebook -->
 
 
-    
+
     <meta property="og:locale" content="pt_BR">
 	  <meta property='og:type' content='website' />
     <meta property="og:url" content="https://lifedesignmg.github.io">
@@ -51,7 +51,7 @@
 
 
     <link rel="icon" type="image/png" href="asssets/imagem/capaweb.jpg" />
-    <META NAME="ABSTRACT" CONTENT="João Victhor Santos - Crie um design para seu negócio - Artes gráficas exclusivos - Alcance mais clientes">
+    <META NAME="ABSTRACT" CONTENT="João Victhor Santos - Crie um design para seu negócio - Artes gráficas exclusivos - Alcance mais clientes - TIM/WPP (32) 9 9809-7650  - ME LIGUE ">
     <meta name="description" content="Crie um design de qualidade, preço acessível e que gere os resultados esperados.  Design exclusivo. Imagens limpa  e direcionada" />
     <META NAME="KEYWORDS" CONTENT="criar artes gráficas, criar um design barato, desenvolver uma identidade visual,  João Victhor Santos, muriae, muriaé, desenvolvimento web" >
 
