alterando legenda debug

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <meta property="og:locale" content="pt_BR">
 	  <meta property='og:type' content='website' />
     <meta property="og:url" content="https://lifedesignmg.github.io">
-    <meta property="og:title" content="João Victhor Santos - Crie um design para seu negócio - Artes gráficas exclusivos - Alcance mais clientes">
+    <meta property="og:title" content="João Victhor Santos - Crie um design para seu negócio - Artes gráficas exclusivos - TIM/WPP (32) 9 9809-7650  - ME LIGUE ">
     <meta property="og:site_name" content="João Victhor Santos - Design Gráfico">
     <meta property="og:description" content="Crie um design de qualidade, preço acessível e que gere os resultados esperados.  Design exclusivo. Imagens limpa  e direcionada">
     <meta property="og:image" content="https://lifedesignmg.github.io/assets/image/capaweb.jpg">
