adicionando alt e title nas img

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <meta property="og:locale" content="pt_BR">
 	  <meta property='og:type' content='website' />
     <meta property="og:url" content="https://lifedesignmg.github.io">
-    <meta property="og:title" content="João Victhor Santos - Crie um design para seu negócio - Artes gráficas exclusivos - TIM/WPP (32) 9 9809-7650  - ME LIGUE ">
+    <meta property="og:title" content="João Victhor Santos - Crie um design para seu negócio - Artes gráficas exclusivas - TIM/WPP (32) 9 9809-7650  - ME LIGUE ">
     <meta property="og:site_name" content="LifeDesignMG">
     <meta property="og:description" content="Crie um design de qualidade, preço acessível e que gere os resultados esperados.  Design exclusivo. Imagens limpa  e direcionada">
     <meta property="og:image" content="https://lifedesignmg.github.io/assets/image/capaweb.jpg">
@@ -154,7 +154,7 @@
               <a href="#" class="tooltipped" data-position="top" data-delay="50" data-tooltip="@LifeDesignMG">
                 <i class="fab fa-facebook-f facebook" ></i>
               </a>
-              <a href="https://www.facebook.com/LifeWDesign/" class="tooltipped" data-position="top" data-delay="50" data-tooltip="Email: jvhdsantos@gmail.com">
+              <a href="https://www.facebook.com/LifeDesignMG/" class="tooltipped" data-position="top" data-delay="50" data-tooltip="Email: jvhdsantos@gmail.com">
                   <i class="far fa-envelope email" ></i>
               </a>
 
@@ -186,7 +186,7 @@
           </div>
           <div class="col l5 m5 s12">
             <br>
-             <img src="assets/image/logo.png" class="responsive-img" alt="">
+             <img src="assets/image/logo.png" class="responsive-img" title="Marketing Visual" alt="Marketing Visual" >
           </div>
         </div>
 
@@ -195,7 +195,7 @@
         <div class="row wow bounceInRight">
           <div class="col l5 m5 s12 hide-on-med-and-down ">
             <br><br><br>
-            <img src="assets/image/logo.png" class="responsive-img" alt="">
+            <img src="assets/image/logo.png" class="responsive-img" title="Identidade visual" alt="Identidade Visual">
           </div>
           <div class="col l7 m7 s12">
             <h3 class="titulo">
@@ -246,7 +246,7 @@
             <div class="col l4 m4 s6">
               <div class="port-box wow rollIn center">
                 <a href="https://www.facebook.com/syncolltechlive/" target="_blank" class="tooltipped" data-position="top" data-delay="50" data-tooltip="DJ'S SyncollTechlive">
-                  <img src="assets/image/sc.jpg" class="responsive-img" alt="syncolltechlive">
+                  <img src="assets/image/sc.jpg" class="responsive-img" title="syncolltechlive" alt="Dj's e produtores">
 
                 </a>
 
@@ -256,8 +256,8 @@
 
             <div class="col l4 m4 s6 ">
               <div class="port-box wow rollIn center">
-                <a href="https://www.facebook.com/LifeWDesign/" target="_blank"  class="tooltipped" data-position="top" data-delay="50" data-tooltip="Pizzaria 3 irmãos">
-                  <img src="assets/image/pizza.jpg" class="responsive-img" alt="Pizzaria">
+                <a href="https://www.facebook.com/LifeDesignMG/" target="_blank"  class="tooltipped" data-position="top" data-delay="50" data-tooltip="Pizzaria 3 irmãos">
+                  <img src="assets/image/pizza.jpg" class="responsive-img" title="Pizzaria" alt="Pizzaria 3 irmãos">
                 </a>
               </div>
             </div>
@@ -265,7 +265,7 @@
             <div class="col l4 m4 s6">
               <div class="port-box wow rollIn center">
                 <a href="https://www.facebook.com/mineirolanchesmuriae/" target="_blank"  class="tooltipped" data-position="top" data-delay="50" data-tooltip="Lanchonete Mineiro Lanches">
-                  <img src="assets/image/mineiro.jpg" class="responsive-img" alt="Mineiro lanche">
+                  <img src="assets/image/mineiro.jpg" class="responsive-img" title="Mineiro lanche" alt="Lanchonete Mineiro Lanches">
                 </a>
 
               </div>
@@ -273,8 +273,8 @@
 
             <div class="col l4 m4 s6">
               <div class="port-box wow rollIn center">
-                <a href="https://www.facebook.com/syncolltechlivemusica ar/" target="_blank"  class="tooltipped" data-position="top" data-delay="50" data-tooltip="Escola Espaço Musical">
-                  <img src="assets/image/musica.jpg" class="responsive-img" alt="">
+                <a href="https://www.facebook.com/LifeDesignMG/" target="_blank"  class="tooltipped" data-position="top" data-delay="50" data-tooltip="Escola Espaço Musical">
+                  <img src="assets/image/musica.jpg" class="responsive-img" title="Espaço Musical" alt="Escola de musica">
                 </a>
               </div>
             </div>
@@ -282,15 +282,15 @@
             <div class="col l4 m4 s6 ">
               <div class="port-box wow rollIn center">
                 <a href="https://www.facebook.com/IDB-Instituto-de-Beleza-1994950217280008/" target="_blank"  class="tooltipped" data-position="top" data-delay="50" data-tooltip="Salão de beleza IDB">
-                  <img src="assets/image/beleza.jpg" class="responsive-img" alt="Infituto de beleza">
+                  <img src="assets/image/beleza.jpg" class="responsive-img" title="Infituto de beleza" alt="Salão de beleza">
                 </a>
               </div>
             </div>
 
             <div class="col l4 m4 s6">
               <div class="port-box wow rollIn center">
-                <a href="https://www.facebook.com/mineirolanchesmuriae/" target="_blank"  class="tooltipped" data-position="top" data-delay="50" data-tooltip="Moda Kids">
-                  <img src="assets/image/kids.jpg" class="responsive-img" alt="">
+                <a href="https://www.facebook.com/LifeDesignMG/" target="_blank"  class="tooltipped" data-position="top" data-delay="50" data-tooltip="Moda Kids">
+                  <img src="assets/image/kids.jpg" class="responsive-img" title="Moda infantil" alt="Moda infantil">
                 </a>
               </div>
             </div>
