--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
 
     <link rel="icon" type="image/png" href="asssets/imagem/capaweb.jpg" />
-    <META NAME="ABSTRACT" CONTENT="João Victhor Santos - Crie um design para seu negócio - Artes gráficas exclusivos - Alcance mais clientes - TIM/WPP (32) 9 9809-7650  - ME LIGUE ">
+    <META NAME="ABSTRACT" CONTENT="João Victhor Santos - Crie um design para seu negócio - Artes gráficas exclusivas - Alcance mais clientes - TIM/WPP (32) 9 9809-7650  - ME LIGUE ">
     <meta name="description" content="Crie um design de qualidade, preço acessível e que gere os resultados esperados.  Design exclusivo. Imagens limpa  e direcionada" />
-    <META NAME="KEYWORDS" CONTENT="criar artes gráficas, criar um design barato, desenvolver uma identidade visual,  João Victhor Santos, muriae, muriaé, desenvolvimento web" >
+    <META NAME="KEYWORDS" CONTENT="criar artes gráficas, criar um design barato, desenvolver uma identidade visual,  João Victhor Santos, muriae, muriaé, artes grafica" >
 
 <link rel="shortcut icon" href="assets/image/logo.png" type="image/x-icon" />
     <script type="text/javascript">
