--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
     <!--Import Google Icon Font-->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="assets/css_site/materialize.min.css"  media="screen,projection"/>
 
