--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <meta property="og:image:height" content="600">
 
 
-    <link rel="icon" type="image/png" href="asssets/imagem/capaweb.jpg" />
+    <link rel="icon" type="image/png" href="https://lifedesignmg.github.io/assets/image/capaweb.jpg" />
     <META NAME="ABSTRACT" CONTENT="João Victhor Santos - Crie um design para seu negócio - Artes gráficas exclusivas - Alcance mais clientes - TIM/WPP (32) 9 9809-7650  - ME LIGUE ">
     <meta name="description" content="Crie um design de qualidade, preço acessível e que gere os resultados esperados.  Design exclusivo. Imagens limpa  e direcionada" />
     <META NAME="KEYWORDS" CONTENT="criar artes gráficas, criar um design barato, desenvolver uma identidade visual,  João Victhor Santos, muriae, muriaé, artes grafica" >
