--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               <a href="#" class="tooltipped" data-position="top" data-delay="50" data-tooltip="@LifeDesignMG">
                 <i class="fab fa-facebook-f facebook" ></i>
               </a>
-              <a href="https://www.facebook.com/LifeDesignMG/" class="tooltipped" data-position="top" data-delay="50" data-tooltip="Email: jvhdsantos@gmail.com">
+              <a href="https://www.facebook.com/LifeDesignMG/" class="tooltipped" data-position="top" data-delay="50" data-tooltip="Email: lifedesignmg@gmail.com">
                   <i class="far fa-envelope email" ></i>
               </a>
 
@@ -317,10 +317,10 @@
               <!--h5 class="titulo">Ou se preferir...</h5-->
             <!--/div-->
               <div class="dados  ">
-                <a href="https://www.facebook.com/LifeWDesign" class="tooltipped" data-position="top" data-delay="50" data-tooltip="@LifeDesignMG">
+                <a href="https://www.facebook.com/LifeDesignMG/" class="tooltipped" data-position="top" data-delay="50" data-tooltip="@LifeDesignMG">
                   <i class="fab fa-facebook-f facebook" ></i>
                 </a>
-                <a href="https://accounts.google.com/signin/v2/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&service=mail&sacu=1&rip=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin" class="tooltipped" data-position="top" data-delay="50" data-tooltip="jvhdsantos@gmail.com">
+                <a href="https://accounts.google.com/signin/v2/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&service=mail&sacu=1&rip=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin" class="tooltipped" data-position="top" data-delay="50" data-tooltip="lifedesignmg@gmail.com">
                     <i class="far fa-envelope email" ></i>
                 </a>
 
@@ -340,8 +340,9 @@
     <footer class="page-footer footer" >
       <div class="container">
         <div class="row">
-          <div class="col l6 s12">
+          <div class="col l8 s12">
             <h5 class="white-text">João Victhor Santos</h5>
+            <h6 class="white-text"><strong>E-mail de Contato: </strong>lifedesignmg@gmail.com</h6>
             <p class="grey-text text-lighten-4">Precisando de um novo visual? Entre em contato e vamos conversar.</p>
             <p class="grey-text text-lighten-4"><strong>Muriaé -</strong> MG</p>
           </div>
@@ -353,7 +354,7 @@
       </div>
       <div class="footer-copyright  copyright ">
         <div class="container">
-        © 2019 Copyright
+        © 2019 Open source, acesse nosso <a href="https://github.com/LifeDesignMG/"><strong>GitHub</strong></a>.
         </div>
 
       </div>
